fixed add movie form for the dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body {
 }
 body.dark-mode {
   background-color: #333333;
-  color: white;
+  color: rgb(101, 98, 98);
 }
 
 .title {
